"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2010-04-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-32:
	  Fixed getall on member arrays, and all arrays in general, 
		closing the last branch regression!
		Implemented by having lookup_top_level_references call
		unroll_references_packed.
		Scalar references lookups now redirected through 
		array reference lookups first (then just take only entry).
	  State of branch: qualifies for final review before merge.


2010-03-30	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-31:
	  scheme: guile and chpsimguile regression tests re-verified (!!!) 
		after some easy fixes to index adjustment in guile library.
		Implemented scm global-reference-subinstances, by calling
		parser::parse_name_to_get_subinstances, which was refactored
		from parse_name_to_get_subnodes (parser/instref.cc).
	  Only one missing feature/regression left on branch: getall(arrays).


2010-03-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-30:
	  hacchpsim: completely fixed, regression tests passed!
		had forgotten to pass global_offset in context to 
		global ID lookup during data updating of event execution.


2010-03-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-29-a:
	  hacchpsim "mostly" to work with new scalability framework,
		few bugs left: nothing crashes, just wrong result.
	  Fixed unroll_context setup to use footprint-frame's for symbol lookup
		in simple_meta_instance_reference
		::lookup_globally_allocated_index().


2010-03-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-29:
	  global_entry_context::construct_global_footprint_frame():
		the variant that operates on meta_instance_reference_base: