@@ -1,0 +1,5 @@
+aliases of "X[22].w[0]":
+FATAL: reference to uninstantiated process bar<> index [22]
+ERROR: unrolling aliases.
+Error resolving a single instance alias.
+Caught exception during construction of simulator state.
