@@ -1,0 +1,8 @@
+# "array-06.prsimrc"
+#	$Id: array-06.prsimrc,v 1.1.2.1 2010/04/02 18:02:40 fang Exp $
+# @haco@ array.haco-a
+# testing bad references
+
+# consider introducing getall-unique
+ls X[22].w[0]
+
